# netvelocimeter

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  requirements-dev.txt
.devcontainer/: devcontainer.json
docs/: models.md
examples/: basic_measurement.py  basic_speed_test.py  batch_automation.py  provider_selection.py  sqlite_integration.py
netvelocimeter/: __init__.py  __main__.py  cli.py  core.py  exceptions.py  legal.py  terms.py
netvelocimeter/cli/: __init__.py  main.py
netvelocimeter/cli/commands/: __init__.py  legal.py  measure.py  provider.py  server.py
netvelocimeter/cli/utils/: formatters.py  logger.py  output_format.py
netvelocimeter/providers/: __init__.py  base.py  measurement_result.py  ookla.py  provider_info.py  server_info.py  static.py
netvelocimeter/utils/: __init__.py  binary_manager.py  formatters.py  hash.py  logger.py  rates.py  xdg.py
tests/: __init__.py  conftest.py  test_core.py  test_legal_requirements.py  test_server_features.py  test_terms.py  test_version_features.py
tests/test_cli/: test_cli_legal.py  test_cli_logger.py  test_cli_main.py  test_cli_measure.py  test_cli_provider.py  test_cli_server.py
tests/test_providers/: __init__.py  test_base.py  test_ookla.py  test_static.py
tests/test_providers/samples/: ookla.json
tests/test_utils/: test_binary_manager.py  test_formatters.py  test_hash.py  test_logger.py  test_rates.py  test_xdg.py
