[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[project]
name = "netvelocimeter"
version = "0.5.0" # TODO change to build git driven
description = "A library for measuring network performance metrics"
keywords = ["network", "performance", "metrics", "monitoring", "speedtest"]
authors = [
    {name = "Dale Phurrough", email = "dale@hidale.com"},
]
maintainers = [
    {name = "Dale Phurrough", email = "dale@hidale.com"},
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E.*"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "Topic :: System :: Networking",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.10"
dependencies = [
    "packaging>=21.0",
]

[project.urls]
homepage = "https://github.com/diablodale/netvelocimeter"
documentation = "https://github.com/diablodale/netvelocimeter/README.md"
source = "https://github.com/diablodale/netvelocimeter"
issues = "https://github.com/diablodale/netvelocimeter/issues"
changelog = "https://github.com/diablodale/pinentry-wsl-ps1/commits/main/"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-subtests>=0.14.1",
    "pyupgrade>=3.19.1",
    "ruff>=0.11.6",
    "mypy>=0.9.0",
    "twine>=4.0.0",
    "build>=0.7.0",
    "pre-commit>=4.0.0",
    "typer>=0.15.3",
]
cli = [
    "typer>=0.15.3",
]

[project.scripts]
netvelocimeter = "netvelocimeter.cli:entrypoint" # entry point for CLI

[tool.hatch.build.targets.wheel]
packages = ["netvelocimeter"]

[tool.mypy]
python_version = 3.10
pretty = true
show-error-codes = true
show-error-context = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = [
    ".*",
    "*.egg",
    "build",
    "dist",
    "venv",
]
addopts = "--strict-markers --cov=netvelocimeter"

[tool.ruff]
line-length = 100  # formatter wraps lines at this length

[tool.ruff.lint]
# On top of the defaults (`E4`, E7`, `E9`, and `F`)
extend-select = [
    "D",   # docstrings
    "E",   # pycodestyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
ignore = [
    "UP038", # deprecated, use pipe in isinstance and issubclass
]
task-tags = ["TODO", "FIXME", "BUGBUG"]
extend-safe-fixes = [
    "D415", # first line should end with a period
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true  # E501
max-line-length = 115  # controls E501 warning; defaults to line-length
#max-doc-length = 100  # W505 warning; defaults to max-line-length

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
split-on-trailing-comma = false
#prefer to have isort's combine_star = true
